--- a/cdss_1/patients/templates/patients/guideline_page.html
+++ b/cdss_1/patients/templates/patients/guideline_page.html
@@ -60,7 +60,8 @@
     </style>
 </head>
 <body>
-    <div id="patientName" data-name="{{ patient.name }}"></div>
+    <!-- Define patientName for hover logging -->
+    <div id="patientName" data-name="{{ patient.name }}"></div> 
 
     <br>
     <br>
@@ -140,8 +141,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script>
-        // Click tracker
+
+        // Post other js
         document.addEventListener('DOMContentLoaded', function () {
+
+            // Click tracker
+
             // Function to send AJAX request
             function trackLinkClick(linkId) {
                 var xhr = new XMLHttpRequest();
@@ -252,7 +257,7 @@
                                 console.log('Hover event recorded successfully');
                             }
                         };
-        
+                        // console.log('component:', component);
                         // console.log('We are here!');
                         xhr.send(JSON.stringify({ component: component, hover_duration: hoverDuration, patientId: patientName }));
                     }
