--- a/cdss_1/patients/templates/patients/patient_detail_simple_demo.html
+++ b/cdss_1/patients/templates/patients/patient_detail_simple_demo.html
@@ -94,15 +94,11 @@
                     <dt class="col-sm-3">Ethnicity:</dt>
                     <dd class="col-sm-9">{{ patient.ethnicity }}</dd>
 
-                    {% if patient.imddecil and patient.imddecil != 'nan' %}
                     <dt class="col-sm-3">IMDDECIL:</dt>
                     <dd class="col-sm-9">{{ patient.imddecil }}</dd>
-                    {% endif %}
 
-                    {% if patient.comorbidities and patient.comorbidities != 'nan' %}
-                        <dt class="col-sm-3">Co-morbidities:</dt>
-                        <dd class="col-sm-9">{{ patient.comorbidities }}</dd>
-                    {% endif %}
+                    <dt class="col-sm-3">Co-morbidities:</dt>
+                    <dd class="col-sm-9">{{ patient.comorbidities }}</dd>
                     
                     <!-- These are included to seperate demographics and acute infomration -->
                     <dt class="col-sm-3"></dt>
@@ -117,11 +113,9 @@
                     <dd class="col-sm-9"></dd>
                     <dt class="col-sm-3"></dt>
                     <dd class="col-sm-9"></dd>
-                    
-                    {% if patient.diagnosis and patient.diagnosis != 'nan' %}
+        
                     <dt class="col-sm-3">Diagnosis:</dt>
                     <dd class="col-sm-9">{{ patient.diagnosis }}</dd>
-                    {% endif %}
         
                     <dt class="col-sm-3">Antibiotic treatment:</dt>
                     <dd class="col-sm-9">{{ patient.antibiotic }}</dd>
@@ -156,60 +150,24 @@
         <br>  
         <br>    
         
-        <h2>Predictions and Guidelines</h2>
         <br>
-
-        <!-- Additional elements with links to subpages -->
-        <div class="additional-elements">
-        <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-        <symbol id="check-circle-fill" viewBox="0 0 16 16">
-            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-        </symbol>
-        <symbol id="info-fill" viewBox="0 0 16 16">
-            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-        </symbol>
-        <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
-            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-        </symbol>
-        </svg>
         <br>
-
-        <!-- Prediction alert -->
-        <div class="alert {% if patient.prediction == 'Switch' %}alert-success{% elif patient.prediction == 'Potentially switch' %}alert-warning{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert" data-alert-id="prediction">
-            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Prediction:">
-                {% if patient.prediction == 'Switch' %}
-                    <use xlink:href="#check-circle-fill"/>
-                {% else %}
-                    <use xlink:href="#exclamation-triangle-fill"/>
-                {% endif %}
-            </svg>
-            <div>
-                AI CDSS Prediction / Recommendation: <a id="predictiondetailsLink" href="{% url 'prediction_page' patient_id=patient.id %}" class="alert_link">{{ patient.prediction }}</a>
-                <!-- AI CDSS Prediction / Recommendation: <a id="predictiondetailsLink" class="alert_link">{{ patient.prediction }}</a> -->
-            </div>
+        <!-- IVOS Guidelines -->
+        <h2>UKHSA IVOS Guidelines</h2>
+        <br>
+        <div class="btn-link-container">
+            <a id="guidelinesLink_simple" href="https://www.gov.uk/government/publications/antimicrobial-intravenous-to-oral-switch-criteria-for-early-switch/national-antimicrobial-intravenous-to-oral-switch-ivos-criteria-for-early-switch" class="btn btn-dark" target="_blank">Guidelines Link</a>
         </div>
         <br>
-
-        <!-- Guideline alert -->
-        <div class="alert {% if patient.guideline == 'Switch' %}alert-success{% elif patient.guideline == 'Potentially switch' %}alert-warning{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert" data-alert-id="guideline">
-            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Guideline:">
-                {% if patient.guideline == 'Switch' %}
-                    <use xlink:href="#check-circle-fill"/>
-                {% else %}
-                    <use xlink:href="#exclamation-triangle-fill"/>
-                {% endif %}
-            </svg>
-            <div>
-                IVOS Guidelines: <a id="guidelinedetailsLink" href="{% url 'guideline_page' patient_id=patient.id %}" class="alert_link">{{ patient.guideline }}</a>
-            </div>
-        </div>
+        <embed src="{% static 'Final_IV_to_Oral_Switch_Decision_Aid_based_on_NationalCriteria_UKHSA.pdf' %}" type="application/pdf" width="100%" height="600px" />
+        <br>
         <br>
         <br>
 
         <!-- User Input Section -->
         <h2>Your Decision</h2>
         <br>
-        <form id="userInputForm" method="post" action="{% url 'process_user_input' patient_id=patient.id %}">
+        <form id="userInputForm" method="post" action="{% url 'process_user_input_demo' patient_id=patient.id %}">
         {% csrf_token %}
 
         <!-- Dropdown Choice -->
@@ -240,7 +198,7 @@
         <br>
         <br>
         <br>
-        <a href="{% url 'patient_list' %}" class="btn btn-secondary">Back to All Patients</a>
+        <a href="{% url 'patient_list_demo' %}" class="btn btn-secondary">Back to All Patients</a>
         <br>
         <br>
         <br>
@@ -249,50 +207,47 @@
 
     <script>
         // Parse JSON data passed from Django view
-        // One with nan (for plot)
-        // One with it filled (for table)
         const vitalsDataJson = {{ vitals_data_json|safe }};
-        const vitalsDataNoNanJson = {{ vitals_data_no_nan_json|safe }};
     
         // Display CSV data in the table
-        displayCsvData(vitalsDataNoNanJson);
-
+        displayCsvData(vitalsDataJson);
+    
         // Function to display JSON data in the table
         function displayCsvData(jsonData) {
-                    const table = document.getElementById("vitals-table");
+            const table = document.getElementById("vitals-table");
 
-                    // Extract metrics and time data
-                    const metrics = jsonData.map(item => item["Metric / Time (hours)"]);
-                    const timePoints = Object.keys(jsonData[0]).filter(key => key !== "Metric / Time (hours)");
+            // Extract metrics and time data
+            const metrics = jsonData.map(item => item["Metric / Time (hours)"]);
+            const timePoints = Object.keys(jsonData[0]).filter(key => key !== "Metric / Time (hours)");
 
-                    // Add table header
-                    const headerRow = document.createElement("tr");
-                    const th = document.createElement("th");
-                    th.textContent = "Metric / Time (hours)";
-                    headerRow.appendChild(th);
-                    timePoints.forEach(timePoint => {
-                        const th = document.createElement("th");
-                        th.textContent = timePoint;
-                        headerRow.appendChild(th);
-                    });
-                    table.appendChild(headerRow);
+            // Add table header
+            const headerRow = document.createElement("tr");
+            const th = document.createElement("th");
+            th.textContent = "Metric / Time (hours)";
+            headerRow.appendChild(th);
+            timePoints.forEach(timePoint => {
+                const th = document.createElement("th");
+                th.textContent = timePoint;
+                headerRow.appendChild(th);
+            });
+            table.appendChild(headerRow);
 
-                    // Add table rows
-                    metrics.forEach(metric => {
-                        const row = document.createElement("tr");
-                        const td = document.createElement("td");
-                        td.textContent = metric;
-                        row.appendChild(td);
+            // Add table rows
+            metrics.forEach(metric => {
+                const row = document.createElement("tr");
+                const td = document.createElement("td");
+                td.textContent = metric;
+                row.appendChild(td);
 
-                        timePoints.forEach(timePoint => {
-                            const td = document.createElement("td");
-                            td.textContent = jsonData.find(item => item["Metric / Time (hours)"] === metric)[timePoint];
-                            row.appendChild(td);
-                        });
+                timePoints.forEach(timePoint => {
+                    const td = document.createElement("td");
+                    td.textContent = jsonData.find(item => item["Metric / Time (hours)"] === metric)[timePoint];
+                    row.appendChild(td);
+                });
 
-                        table.appendChild(row);
-                    });
-                }
+                table.appendChild(row);
+            });
+        }
 
         // Extract metrics and time data
         const metrics = vitalsDataJson.map(item => item["Metric / Time (hours)"]);
@@ -330,7 +285,6 @@
                 name: metric,
                 type: 'line',
                 data: timePoints.map(timePoint => vitalsDataJson.find(item => item["Metric / Time (hours)"] === metric)[timePoint]),
-                connectNulls:true
             })),
             dataZoom: [
             {
@@ -357,7 +311,7 @@
         // Set the initial options
         echartsInstance.setOption(options);
 
-        // Echarts legend click event listener
+        // Add legend click event listener
         echartsInstance.on('legendselectchanged', function (params) {
             // Toggle visibility of selected series based on legend selection
             Object.keys(options.legend.selected).forEach(seriesName => {
@@ -380,35 +334,19 @@
             dropdown.setCustomValidity("");
         }
         });
-    
+
         // Post other js
         document.addEventListener('DOMContentLoaded', function () {
+            
             // Click tracker
         
-            // Add event listener for 'AI CDSS Prediction / Recommendation' link
-            var predictiondetailsLink = document.getElementById('predictiondetailsLink');
-            // console.log('predictiondetailsLink');
-            predictiondetailsLink.addEventListener('click', function () {
-                trackLinkClick('predictiondetailsLink');
-            });
-        
-            // Add event listener for 'IVOS Guidelines' link
-            var guidelinedetailsLink = document.getElementById('guidelinedetailsLink');
-            // console.log('guidelinedetailsLink');
-            guidelinedetailsLink.addEventListener('click', function () {
-                trackLinkClick('guidelinedetailsLink');
-            });
-
             // Function to send AJAX request
             function trackLinkClick(linkId) {
                 var xhr = new XMLHttpRequest();
                 xhr.open('POST', '/track_link_click/');
         
                 // Include CSRF token in headers
-                var csrfToken = getCSRFToken();
-        
-                console.log('csrfToken:', csrfToken);
-        
+                var csrfToken = getCSRFToken();        
                 if (csrfToken) {
                     xhr.setRequestHeader('Content-Type', 'application/json');
                     xhr.setRequestHeader('X-CSRFToken', csrfToken);
@@ -417,23 +355,30 @@
 
                     // Get patient_id
                     var patientNameElement = document.getElementById('patientName');
-                    // console.log('patientNameElement', patientNameElement)
+                    console.log('patientNameElement', patientNameElement)
 
                     if (patientNameElement) {
                         var patientName = patientNameElement.getAttribute('data-name');
-                        // console.log('Patient Name:', patientName);
+                        console.log('Patient Name:', patientName);
         
                         xhr.onload = function () {
                             if (xhr.status === 200) {
                                 console.log('Link click recorded successfully');
                             }
                         };
-        
+
                         // console.log('We are here!');
                         xhr.send(JSON.stringify({ linkId: linkId, patientId: patientName }));
                     }
                 }
             }
+
+            // Add event listener for 'guidelines' link
+            var guidelinesLink_simple = document.getElementById('guidelinesLink_simple');
+            // console.log('guidelinedetailsLink');
+            guidelinesLink_simple.addEventListener('click', function () {
+                trackLinkClick('guidelinesLink_simple');
+            });
             
             // Track hovering
 
@@ -441,8 +386,7 @@
             const table = document.getElementById('vitals-table');
             const plot = document.getElementById('echarts-container');
             const card = document.querySelector('.card');
-            const predictionAlert = document.querySelector('.alert[data-alert-id="prediction"]');
-            const guidelineAlert = document.querySelector('.alert[data-alert-id="guideline"]');
+            const guidelinesEmbed = document.querySelector('embed[src*="Final_IV_to_Oral_Switch_Decision_Aid_based_on_NationalCriteria_UKHSA.pdf"]');
             
             let hoverStartTime;
 
@@ -554,33 +498,17 @@
                 });
             });
 
-            // Attach event listeners to the predictionAlert for hover events
-            predictionAlert.addEventListener('mouseover', function (event) {
+            // Attach event listeners to the guidelinesEmbed for hover events
+            guidelinesEmbed.addEventListener('mouseover', function (event) {
                 hoverStartTime = new Date().getTime();
             });
-            console.log('Hover - predictionAlert');
-            predictionAlert.addEventListener('mouseout', function (event) {
+            console.log('Hover - guidelinesEmbed');
+            guidelinesEmbed.addEventListener('mouseout', function (event) {
                 const hoverEndTime = new Date().getTime();
                 const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
 
                 // Extract relevant information for recording
-                const component = 'prediction_alert';
-
-                // Send AJAX request to the server
-                sendHoverEvent(component, hoverDuration);
-            });
-
-            // Attach event listeners to the guidelineAlert for hover events
-            guidelineAlert.addEventListener('mouseover', function (event) {
-                hoverStartTime = new Date().getTime();
-            });
-            console.log('Hover - guidelineAlert');
-            guidelineAlert.addEventListener('mouseout', function (event) {
-                const hoverEndTime = new Date().getTime();
-                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
-
-                // Extract relevant information for recording
-                const component = 'guideline_alert';
+                const component = 'guidelines_pdf_simple';
 
                 // Send AJAX request to the server
                 sendHoverEvent(component, hoverDuration);
