--- a/cdss_1/patients/templates/patients/prediction_page_demo.html
+++ b/cdss_1/patients/templates/patients/prediction_page_demo.html
@@ -199,7 +199,7 @@
 
         <br>
         <br>
-        <a href="{% url 'patient_detail' patient_id=patient.id %}" class="btn btn-secondary">Back to Patient</a>
+        <a href="{% url 'patient_detail_demo' patient_id=patient.id %}" class="btn btn-secondary">Back to Patient</a>
         <br>
         <br>
         <br>
