--- a/cdss_1/patients/templates/patients/prediction_page_demo.html
+++ b/cdss_1/patients/templates/patients/prediction_page_demo.html
@@ -213,7 +213,7 @@
         // Function to update text based on the patient's name
         function updateText() {
             // Condition based on the patient's name
-            if (patientName === "Patient 7" || patientName === "Patient 8" || patientName === "Patient 9" || patientName === "Patient 10" || patientName === "Patient 11" || patientName === "Patient 12") {
+            if (patientName === "Patient 3" || patientName === "Patient 7" || patientName === "Patient 8" || patientName === "Patient 9" || patientName === "Patient 10" || patientName === "Patient 11" || patientName === "Patient 12") {
             document.getElementById("figureTitle").innerHTML = "Table displaying similar patients features for comparison <br> and indicating feature contribution towards the predictions";
             } else {
             document.getElementById("figureTitle").innerHTML = "Heatmap indicating feature similarity between <br> this patient and the similar patients";
