--- a/cdss_1/patients/templates/patients/tam.html
+++ b/cdss_1/patients/templates/patients/tam.html
@@ -68,7 +68,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q3">In my job using this AI CDSS would be relevant </label>
+                    <label for="q3">I prefered making IV-to-oral switch decisions with the AI CDSS verus without</label>
                     <br>
                     <br>
                     <select name="q3" id="q3" required>
@@ -84,7 +84,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q4">The data presented in this study is important for delivering care and undertaking antibiotic stewardship</label>
+                    <label for="q4">In my job using this AI CDSS would be relevant </label>
                     <br>
                     <br>
                     <select name="q4" id="q4" required>
@@ -100,7 +100,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q5">I would find the AI CDSS useful in my job</label>
+                    <label for="q5">The data presented in this study is important for delivering care and undertaking antibiotic stewardship</label>
                     <br>
                     <br>
                     <select name="q5" id="q5" required>
@@ -116,7 +116,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q6">Using this AI CDSS in my job would increase my productivity</label>
+                    <label for="q6">I would find the AI CDSS useful in my job</label>
                     <br>
                     <br>
                     <select name="q6" id="q6" required>
@@ -132,7 +132,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q7">Using this AI CDSS would make it easier to do my job</label>
+                    <label for="q7">Using this AI CDSS in my job would increase my productivity</label>
                     <br>
                     <br>
                     <select name="q7" id="q7" required>
@@ -148,7 +148,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q8">This AI CDSS could improve the quality of care that I deliver</label>
+                    <label for="q8">Using this AI CDSS would make it easier to do my job</label>
                     <br>
                     <br>
                     <select name="q8" id="q8" required>
@@ -164,7 +164,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q9">The interface was pleasant with information clearly visible</label>
+                    <label for="q9">This AI CDSS could improve the quality of care that I deliver</label>
                     <br>
                     <br>
                     <select name="q9" id="q9" required>
@@ -180,7 +180,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q10">It was easy to understand recommendations given by the AI CDSS</label>
+                    <label for="q10">The interface was pleasant with information clearly visible</label>
                     <br>
                     <br>
                     <select name="q10" id="q10" required>
@@ -196,7 +196,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q11">It was easy to get acquainted using the AI </label>
+                    <label for="q11">I prefered using this interface for antibiotic stewardship decision making over software I currently use in clinical practice</label>
                     <br>
                     <br>
                     <select name="q11" id="q11" required>
@@ -212,7 +212,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q12">Training on the AI CDSS was sufficient</label>
+                    <label for="q12">It was easy to understand recommendations given by the AI CDSS</label>
                     <br>
                     <br>
                     <select name="q12" id="q12" required>
@@ -228,7 +228,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q13">My use of the AI CDSS was voluntary</label>
+                    <label for="q13">It was easy to get acquainted using the AI </label>
                     <br>
                     <br>
                     <select name="q13" id="q13" required>
@@ -244,7 +244,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q14">Patients will welcome that I use this AI technology</label>
+                    <label for="q14">Training on the AI CDSS was sufficient</label>
                     <br>
                     <br>
                     <select name="q14" id="q14" required>
@@ -260,7 +260,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q15">People who are important to me think I should use AI technology</label>
+                    <label for="q15">My use of the AI CDSS was voluntary</label>
                     <br>
                     <br>
                     <select name="q15" id="q15" required>
@@ -276,7 +276,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q16">People in my organization involved in AI research have more prestige than those who do not</label>
+                    <label for="q16">Patients will welcome that I use this AI technology</label>
                     <br>
                     <br>
                     <select name="q16" id="q16" required>
@@ -292,7 +292,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q17">The quality of the AI CDSS predictions was high </label>
+                    <label for="q17">People who are important to me think I should use AI technology</label>
                     <br>
                     <br>
                     <select name="q17" id="q17" required>
@@ -308,7 +308,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q18">Details such as similar patients and their features improved my trust in the AI CDSS</label>
+                    <label for="q18">People in my organization involved in AI research have more prestige than those who do not</label>
                     <br>
                     <br>
                     <select name="q18" id="q18" required>
@@ -324,7 +324,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q19">Using the AI CDSS changed my decision making process</label>
+                    <label for="q19">The quality of the AI CDSS predictions was high </label>
                     <br>
                     <br>
                     <select name="q19" id="q19" required>
@@ -340,10 +340,10 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q20">This AI CDSS could be seamlessly integrated into my current clinical workflow</label>
+                    <label for="q20">Details such as similar patients and their features improved my trust in the AI CDSS</label>
                     <br>
                     <br>
-                    <select name="q20" id="20" required>
+                    <select name="q20" id="q20" required>
                         <option value="" selected disabled>Select an option</option>
                         <option value="1">Strongly disagree</option>
                         <option value="2">Disagree</option>
@@ -356,7 +356,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q21">I think my healthcare institution has the necessary infrastructure to support this AI CDSS</label>
+                    <label for="q21">Using the AI CDSS changed my decision making process</label>
                     <br>
                     <br>
                     <select name="q21" id="q21" required>
@@ -372,10 +372,10 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q22">Assuming I had access to the AI CDSS, I would intend to use it</label>
+                    <label for="q22">This AI CDSS could be seamlessly integrated into my current clinical workflow</label>
                     <br>
                     <br>
-                    <select name="q22" id="q22" required>
+                    <select name="q22" id="22" required>
                         <option value="" selected disabled>Select an option</option>
                         <option value="1">Strongly disagree</option>
                         <option value="2">Disagree</option>
@@ -388,23 +388,23 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q23">How many of your colleagues would use this AI CDSS if it were implemented</label>
+                    <label for="q23">I think my healthcare institution has the necessary infrastructure to support this AI CDSS</label>
                     <br>
                     <br>
                     <select name="q23" id="q23" required>
                         <option value="" selected disabled>Select an option</option>
-                        <option value="1">None of them</option>
-                        <option value="2">Few of them</option>
-                        <option value="3">Some of them</option>
-                        <option value="4">Most of them</option>
-                        <option value="5">All of them</option>
+                        <option value="1">Strongly disagree</option>
+                        <option value="2">Disagree</option>
+                        <option value="3">Neither agree nor disagree</option>
+                        <option value="4">Agree</option>
+                        <option value="5">Strongly agree</option>
                         
                     </select>
                 </div>
                 <br>
                 <br>
                 <div>
-                    <label for="q24">Overall, I think this AI CDSS has the potential to be a useful tool for antibiotic stewardship</label>
+                    <label for="q24">Assuming I had access to the AI CDSS, I would intend to use it</label>
                     <br>
                     <br>
                     <select name="q24" id="q24" required>
@@ -419,9 +419,41 @@
                 </div>
                 <br>
                 <br>
+                <div>
+                    <label for="q25">How many of your colleagues would use this AI CDSS if it were implemented</label>
+                    <br>
+                    <br>
+                    <select name="q25" id="q25" required>
+                        <option value="" selected disabled>Select an option</option>
+                        <option value="1">None of them</option>
+                        <option value="2">Few of them</option>
+                        <option value="3">Some of them</option>
+                        <option value="4">Most of them</option>
+                        <option value="5">All of them</option>
+                        
+                    </select>
+                </div>
+                <br>
+                <br>
+                <div>
+                    <label for="q26">Overall, I think this AI CDSS has the potential to be a useful tool for antibiotic stewardship</label>
+                    <br>
+                    <br>
+                    <select name="q26" id="q26" required>
+                        <option value="" selected disabled>Select an option</option>
+                        <option value="1">Strongly disagree</option>
+                        <option value="2">Disagree</option>
+                        <option value="3">Neither agree nor disagree</option>
+                        <option value="4">Agree</option>
+                        <option value="5">Strongly agree</option>
+                        
+                    </select>
+                </div>
+                <br>
+                <br>
                 <!-- Free text question at end -->
-                <label for="q25">Do you have any final comments on the AI CDSS investigated in this research or recomendations for future research?</label>
-                <input name="q25" id="q25" autocomplete="off">
+                <label for="q27">Do you have any final comments on the AI CDSS investigated in this research or recomendations for future research?</label>
+                <input name="q27" id="q27" autocomplete="off">
                 <br>
                 <br>
 
