--- a/cdss_1/patients/templates/patients/tam.html
+++ b/cdss_1/patients/templates/patients/tam.html
@@ -356,7 +356,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q21">Using the AI CDSS changed my decision making process</label>
+                    <label for="q21">Using the AI CDSS changed my decision making</label>
                     <br>
                     <br>
                     <select name="q21" id="q21" required>
