--- a/cdss_1/patients/templates/patients/tam.html
+++ b/cdss_1/patients/templates/patients/tam.html
@@ -100,7 +100,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q5">The data presented in this study is important for delivering care and undertaking antibiotic stewardship</label>
+                    <label for="q5">The data presented in this study is important for delivering care and prescribing antibiotics</label>
                     <br>
                     <br>
                     <select name="q5" id="q5" required>
@@ -196,7 +196,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q11">I prefered using this interface for antibiotic stewardship decision making over software I currently use in clinical practice</label>
+                    <label for="q11">I prefered using this interface for antibiotic decision making over software I currently use in clinical practice</label>
                     <br>
                     <br>
                     <select name="q11" id="q11" required>
@@ -436,7 +436,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q26">Overall, I think this AI CDSS has the potential to be a useful tool for antibiotic stewardship</label>
+                    <label for="q26">Overall, I think this AI CDSS has the potential to be a useful tool for antibiotic intravenous-to-oral switch</label>
                     <br>
                     <br>
                     <select name="q26" id="q26" required>
