--- a/cdss_1/patients/templates/patients/details.html
+++ b/cdss_1/patients/templates/patients/details.html
@@ -49,6 +49,19 @@
                 <input type="text" id="grade" name="grade" autocomplete="off">
                 <br>
                 <br>
+                <div>
+                    <label for="ai">How familiar are you with AI technology?</label>
+                    <br>
+                    <select name="ai" id="ai">
+                        <option value="" selected disabled>Select an option</option>
+                        <option value="1">Not familiar</option>
+                        <option value="2">Slightly familiar</option>
+                        <option value="3">Moderately familiar</option>
+                        <option value="4">Very familiar</option>
+                        <option value="5">Extremely familiar</option>
+                    </select>
+                </div>
+                <br>
                 <br>
 
                 <button type="submit" class="btn btn-primary">Continue</button>
