--- a/cdss_1/patients/static/css/patient_detail_simple.css
+++ b/cdss_1/patients/static/css/patient_detail_simple.css
@@ -1,9 +1,39 @@
 body {
     background-color: white;
-    }
+  }
 table {
     width: 100%;
     text-align: center;
+}
+
+.table-container {
+    overflow-x: scroll !important; /* Force horizontal scrolling */
+    white-space: nowrap; /* Prevent table content from wrapping */
+}
+
+/* Custom scrollbar styles for Webkit browsers */
+.table-container::-webkit-scrollbar {
+    height: 16px; /* Height of the scrollbar */
+}
+
+.table-container::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Track color */
+}
+
+.table-container::-webkit-scrollbar-thumb {
+    background-color: #888; /* Scrollbar thumb color */
+    border-radius: 10px; /* Rounded corners */
+    border: 2px solid #f1f1f1; /* Space around the thumb */
+}
+
+.table-container::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Color on hover */
+}
+
+/* Custom scrollbar styles for Firefox */
+.table-container {
+    scrollbar-width: thin; /* Set the width of the scrollbar */
+    scrollbar-color: #888 #f1f1f1; /* Set the thumb and track colors */
 }
 
 th, td {
